redactable/tests/ui/not_sensitive_sensitive_rejected.rs
use redactable::NotSensitive;

#[derive(NotSensitive)]
struct Invalid {
    #[sensitive(redactable::Secret)]
    value: String,
}

fn main() {}
